# capstone-project-dennisgera

./: .gitignore  .yamllint  README.md  pyproject.toml
