[tool.poetry]
name = "capstone-project-dennisgera"
version = "0.1.0"
description = ""
authors = ["Dennis Gera <geradennis@gmail.com>"]
readme = "README.md"
packages = [{include = "capstone_project_dennisgera"}]

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.21.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
sqlfluff = "^3.0.6"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
